lavet sal route + request og responses