@@ -1,6 +1,7 @@
 package dat3.service;
 
-import dat3.dto.BiografDto;
+import dat3.dto.BiografDtoRequest;
+import dat3.dto.BiografDtoResponse;
 import dat3.entity.Biograf;
 import dat3.repository.BiografRepository;
 import org.springframework.http.HttpStatus;
@@ -8,53 +9,54 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class BiografService {
-    BiografRepository biografRepository;
-
+    private final BiografRepository biografRepository;
 
     public BiografService(BiografRepository biografRepository) {
         this.biografRepository = biografRepository;
     }
 
-    public List<BiografDto> getAllBiografer() {
-        List<Biograf> biografer =  biografRepository.findAll();
-        return biografer.stream().map(biograf -> new BiografDto(biograf, true)) // Brug FilmDto-konstruktøren, der mapper alle filmoplysninger
-                .toList();
+    public List<BiografDtoResponse> getAllBiografer() {
+        List<Biograf> biografer = biografRepository.findAll();
+        return biografer.stream()
+                .map(BiografDtoResponse::new)
+                .collect(Collectors.toList());
     }
 
-    public BiografDto getBiografById(int idInt) {
-        Biograf biograf = biografRepository.findById(idInt).orElseThrow(() ->
+    public BiografDtoResponse getBiografById(int id) {
+        Biograf biograf = biografRepository.findById(id).orElseThrow(() ->
                 new RuntimeException("Biograf ikke fundet"));
-        return new BiografDto(biograf, false);
+        return new BiografDtoResponse(biograf);
     }
 
-    public BiografDto addBiograf(BiografDto request) {
+    public BiografDtoResponse addBiograf(BiografDtoRequest request) {
         Biograf newBiograf = new Biograf();
         updateBiograf(newBiograf, request);
         biografRepository.save(newBiograf);
-        return new BiografDto(newBiograf, false);
+        return new BiografDtoResponse(newBiograf);
     }
 
-    public void updateBiograf(Biograf original, BiografDto r) {
-        original.setNavn(r.getNavn());
-        original.setAdresse(r.getAdresse());
-        original.setAntalSale(r.getAntalSale());
-    }
-
-
-    public BiografDto editBiograf(BiografDto request, int id) {
+    public BiografDtoResponse editBiograf(BiografDtoRequest request, int id) {
         Biograf biograf = biografRepository.findById(id).orElseThrow(() ->
                 new RuntimeException("Biograf ikke fundet"));
         updateBiograf(biograf, request);
         biografRepository.save(biograf);
-        return new BiografDto(biograf, false);
+        return new BiografDtoResponse(biograf);
     }
 
-    public ResponseEntity deleteBiograf(int id) {
+    public ResponseEntity<Void> deleteBiograf(int id) {
         Biograf biograf = biografRepository.findById(id).orElseThrow(() ->
                 new RuntimeException("Biograf ikke fundet"));
-        return new ResponseEntity(HttpStatus.OK);
+        biografRepository.delete(biograf);
+        return ResponseEntity.ok().build();
+    }
+
+    private void updateBiograf(Biograf biograf, BiografDtoRequest request) {
+        biograf.setNavn(request.getNavn());
+        biograf.setAdresse(request.getAdresse());
+        biograf.setAntalSale(request.getAntalSale());
     }
 }
